Mon Dec  9 15:13:14 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.8 release candidate.

Fri Dec  6 14:13:59 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_cmp): define Numeric#<=>, remove Numeric#==.

Tue Dec  3 01:48:06 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (backtrace): should ignore line 0 frame.

Sun Dec  1 22:43:29 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* win32/win32.c (win32_stat): empty path is invalid, and return
	  ENOENT rather than EBADF in such case.  [ruby-talk:57177]

Wed Nov 27 17:42:56 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Cut redundancy.

	* ext/syslog/syslog.c: Do not leak ident.

	* ext/syslog/syslog.c, ext/syslog/test.rb: Syslog.close should
	  raise RuntimeError when not opened.

	* ext/syslog/syslog.c, ext/syslog/test.rb:
	  Syslog.{ident,options,facility,mask} should all return nil when
	  not opened.

	* ext/syslog/syslog.c, ext/syslog/test.rb: Change back the output
	  format of inspect().

Wed Nov 27 16:27:59 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/test.rb: Switch from RUnit to Test::Unit.

Wed Nov 27 16:22:09 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Fix a problem where Syslog#ident was not
	  marked and could thus be GC'd.

	* ext/syslog/test.rb: Switch from RUnit to Test::Unit.

	* ext/syslog/test.rb: The output format of inspect() is slightly
	  altered.

Fri Nov 22 19:30:17 2002  Akinori MUSHA  <knu@iDaemons.org>

	* instruby.rb: Install batch files on Windows. [Submitted by usa]

Fri Nov 22 22:55:01 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): preceding ".." for negative
	  hexadecimal numbers should not appear if prec (e.g. %.4) is
	  specified.

Thu Nov 21 20:56:35 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: should not overwrite Host: header.

Wed Nov 20 02:07:12 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
